--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Humpback whale Quiz</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Humpback Quiz">
-  <link rel="shortcut icon" href="#">
-  <link rel="stylesheet" type="text/css" href="index.css" />
+    <meta charset="utf-8" />
+    <title>Humpback whale Quiz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Humpback Quiz">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
 <body>
-<header>
+<header role="banner">
     <div>
         <h1>Humpback Whale Quiz</h1>
     </div>
